--- a/style.css
+++ b/style.css
@@ -74,11 +74,11 @@ img {
     height: auto;
 }
 
-.section-three {
+.section-two {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 16px;
+    gap: 40px;
     padding: 80px 240px;
     background-color: white;
     color: black;
@@ -96,4 +96,23 @@ h2 {
     justify-content: space-around;
     gap: 40px;
 }
+
+.section {
+    display: flex;
+    width: 200px;
+    flex-direction: column;
+    gap: 8px;
+    text-align: center;
+    color: rgb(81, 81, 81);
+}
+
+.card {
+    display: block;
+    box-sizing: border-box;
+    height: 200px;
+    width: 200px;
+    border: 4px solid #3882F6;
+    border-radius: 8px;
+}
+
 
